--- a/styles/bootstyles.css
+++ b/styles/bootstyles.css
@@ -1,13 +1,13 @@
-.ul {
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: lightslategray;
   }
   
   li {
-    float: left;
+    float: right;
   }
   
   li a {
@@ -16,8 +16,48 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bolder;
   }
   
   li a:hover {
-    background-color: #111;
+    background-color:rgb(206, 229, 248);
   }
+
+  .header{
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    font-size: 50px;
+  }
+
+  body{
+    background-color: rgb(206, 229, 248);
+}
+
+.center{
+  display: block;
+  margin-left:210px;
+  margin-right: 35px;
+  width: 50%;
+}
+
+.caption{
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: x-large;
+}
+
+.footer{
+  list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    background-color: lightslategray;
+    text-align: center;
+    color:white;
+    display: block;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+}
